--- a/virtual_lab/src/main/webapp/partials/registration-modal.html
+++ b/virtual_lab/src/main/webapp/partials/registration-modal.html
@@ -40,7 +40,7 @@
 				<div class="controls">
 					<select ui-select2 ng-model="select2" data-placeholder="Pick an institution"  ng-required="true">
 					    <option value=""></option>
-					    <option ng-repeat="institution in institutions" value="{{institution.name}}">{{institution.name}}</option>
+					    <option ng-repeat="institution in institutions()" value="{{institution.name}}">{{institution.name}}</option>
 					</select>
 					<!-- 
 					input type="text" id="registrationInstitution" placeholder="Institution">
