--- a/trunk/virtual_lab/src/main/webapp/partials/login-modal.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/login-modal.html
@@ -1,37 +1,32 @@
-
-<div id="loginModal" class="modal hide fade" tabindex="-1" role="dialog"
-	aria-labelledby="myModalLabel" aria-hidden="true">
+<div id="loginModal" class="modal" tabindex="-1" role="dialog"
+	aria-labelledby="loginModalLabel" aria-hidden="true">
 	
 	<form id="login-form" class="">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal"
-				aria-hidden="true">×</button>
-			<h3 id="modalLabel">Researcher Login</h3>
+				aria-hidden="true">&times;</button>
+			<h3 id="loginModalLabel">Researcher Login</h3>
 		</div>
 		<div class="modal-body">
-
 			<div class="modal-body">
-
 				<div class="control-group">
 					<label class="control-label" for="inputUsername">Username</label>
 					<div class="controls">
-						<input type="text" id="inputUsername" placeholder="Username">
+						<input type="text" id="inputUsername" placeholder="Username" ng-model="userName">
 					</div>
 				</div>
-
 				<div class="control-group">
-					<label class="control-label" for="inputPasword">Password</label>
+					<label class="control-label" for="inputPassword">Password</label>
 					<div class="controls">
-						<input type="text" id="inputPassword" placeholder="Password">
+						<input type="text" id="inputPassword" placeholder="Password" ng-model="password">
 					</div>
 				</div>
-
 				<p>Not a registered user? Click here to create an account.</p>
 				<p>Forgot your password? Click here to retrieve it.</p>
 			</div>
 			<div class="modal-footer">
-				<button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
-				<button class="btn btn-primary">Submit</button>
+				<button class="btn" aria-hidden="true"  ng-click="login(false)">Cancel</button>
+				<button class="btn btn-primary"  ng-click="login(true)">Submit</button>
 			</div>
 		</div>
 	</form>
