--- a/trunk/virtual_lab/src/main/webapp/WEB-INF/views/institutions/update.jspx
+++ b/trunk/virtual_lab/src/main/webapp/WEB-INF/views/institutions/update.jspx
@@ -3,6 +3,6 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:update id="fu_au_net_huni_model_Institution" modelAttribute="institution" path="/console/institutions" versionField="Version" z="user-managed">
-        <field:input field="name" id="c_au_net_huni_model_Institution_name" max="60" min="5" required="true" z="f2lTZDP9n+SWzmqG4dwyl/LyOqk="/>
+        <field:input field="name" id="c_au_net_huni_model_Institution_name" max="60" min="5" required="true" z="user-managed"/>
     </form:update>
 </div>
