--- a/virtual_lab/src/main/webapp/WEB-INF/views/researchers/update.jspx
+++ b/virtual_lab/src/main/webapp/WEB-INF/views/researchers/update.jspx
@@ -7,8 +7,8 @@
         <field:input field="password" id="c_au_net_huni_model_Researcher_password" render="false" type="password" z="user-managed"/>
         <field:checkbox field="isAccountEnabled" id="c_au_net_huni_model_Researcher_isAccountEnabled" z="eNQ+Bf7dMBru+rzOSevZ9D9tYuY="/>
         <field:select field="roles" id="c_au_net_huni_model_Researcher_roles" itemValue="id" items="${userroles}" multiple="true" path="/userroles" z="I9qAFRfc4SPYpwLkVIuLBkREl6M="/>
-        <field:input field="givenName" id="c_au_net_huni_model_Researcher_givenName" required="true" z="L6Wlj0mcknPkXrc3VfkNuDikP78="/>
-        <field:input field="familyName" id="c_au_net_huni_model_Researcher_familyName" required="true" z="DAQcTwVWJ9RsoY6CTQINNSFS/Yg="/>
+        <field:input field="givenName" id="c_au_net_huni_model_Researcher_givenName" required="true" z="user-managed"/>
+        <field:input field="familyName" id="c_au_net_huni_model_Researcher_familyName" required="true" z="user-managed"/>
         <field:select field="history" id="c_au_net_huni_model_Researcher_history" itemValue="id" items="${historyitems}" multiple="true" path="/console/historyitems" z="user-managed"/>
     </form:update>
 </div>
