--- a/virtual_lab/src/main/webapp/partials/feedback-button.html
+++ b/virtual_lab/src/main/webapp/partials/feedback-button.html
@@ -1,12 +1,12 @@
 <!-- Button to trigger feedback modal - feedback-modal.html -->
-<div ng-controller="FeedbackButtonCtrl" style="width:400px;">
+<div ng-controller="FeedbackButtonCtrl" style="width:600px;">
 	<table>
 		<tr>
 			<td>
 				<a ng-click="openDialog()" class="btn" ng-class="{'btn-danger':!feedbackAccepted(), 'btn-success':feedbackAccepted()}">Feedback</a>
 			</td>
-			<td>
-				<span style="clear: both; margin: 5px" ng-hide="feedbackAccepted()" > 
+			<td style="padding: 2px 8px;">
+				<span style="clear: both; margin: 0px" ng-hide="feedbackAccepted()" > 
 					We need you! To make sure that the HuNI virtual lab serves
 					the need of its early adopters, we welcome your feedback in the
 					building process. 
