RR: bring feedback up to date with -- export CSV function in console. -- address and ip address fields added. -- tests

--- a/trunk/virtual_lab/.settings/org.eclipse.wst.common.component
+++ b/trunk/virtual_lab/.settings/org.eclipse.wst.common.component
@@ -112,6 +112,9 @@
     <dependent-module archiveName="objenesis-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/var/M2_REPO/org/objenesis/objenesis/1.0/objenesis-1.0.jar">
       <dependency-type>uses</dependency-type>
     </dependent-module>
+    <dependent-module archiveName="opencsv-2.3.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/var/M2_REPO/net/sf/opencsv/opencsv/2.3/opencsv-2.3.jar">
+      <dependency-type>uses</dependency-type>
+    </dependent-module>
     <dependent-module archiveName="slf4j-api-1.7.2.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/var/M2_REPO/org/slf4j/slf4j-api/1.7.2/slf4j-api-1.7.2.jar">
       <dependency-type>uses</dependency-type>
     </dependent-module>
