--- a/trunk/virtual_lab/src/main/webapp/WEB-INF/views/userroles/create.jspx
+++ b/trunk/virtual_lab/src/main/webapp/WEB-INF/views/userroles/create.jspx
@@ -3,7 +3,8 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:create id="fc_au_net_huni_model_UserRole" modelAttribute="userRole" path="/console/userroles" render="${empty dependencies}" z="user-managed">
-        <field:input type="text" field="name" id="c_au_net_huni_model_UserRole_name" required="true" z="user-managed"/>
+        <field:input field="name" id="c_au_net_huni_model_UserRole_name" required="true" type="text" z="user-managed"/>
+        <field:select field="researchers" id="c_au_net_huni_model_UserRole_researchers" itemValue="id" items="${researchers}" multiple="true" path="/researchers" z="TPqKojEHf5cihBAsEwXDxQqE1Po="/>
     </form:create>
     <form:dependency dependencies="${dependencies}" id="d_au_net_huni_model_UserRole" render="${not empty dependencies}" z="743Aq1p96W69lyc1/JdYS/Dbvj4="/>
 </div>
