--- a/virtual_lab/src/main/webapp/WEB-INF/views/userroles/update.jspx
+++ b/virtual_lab/src/main/webapp/WEB-INF/views/userroles/update.jspx
@@ -3,6 +3,7 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:update id="fu_au_net_huni_model_UserRole" modelAttribute="userRole" path="/console/userroles" versionField="Version" z="user-managed">
-        <field:input type="text" field="name" id="c_au_net_huni_model_UserRole_name" required="true" z="user-managed"/>
+        <field:input field="name" id="c_au_net_huni_model_UserRole_name" required="true" type="text" z="user-managed"/>
+        <field:select field="researchers" id="c_au_net_huni_model_UserRole_researchers" itemValue="id" items="${researchers}" multiple="true" path="/researchers" z="TPqKojEHf5cihBAsEwXDxQqE1Po="/>
     </form:update>
 </div>
