--- a/trunk/virtual_lab/src/main/webapp/WEB-INF/views/menu.jspx
+++ b/trunk/virtual_lab/src/main/webapp/WEB-INF/views/menu.jspx
@@ -18,8 +18,8 @@
         <menu:category id="c_feedbackitem" z="oLisAXmRyb9eXc61s7VbFQaOlU0=">
             <menu:item id="i_feedbackitem_new" messageCode="global_menu_new" url="/console/feedbackitems?form" z="user-managed"/>
             <menu:item id="i_feedbackitem_list" messageCode="global_menu_list" url="/console/feedbackitems?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
-			<menu:item id="i_feedbackitem_export" messageCode="global_menu_export" url="/console/feedbackitems/export" z="user-managed"/>
- 		</menu:category>
+            <menu:item id="i_feedbackitem_export" messageCode="global_menu_export" url="/console/feedbackitems/export" z="user-managed"/>
+        </menu:category>
         <menu:category id="c_institution" z="5+H17nsNm0/SudzTa4gvanI68Ak=">
             <menu:item id="i_institution_new" messageCode="global_menu_new" url="/console/institutions?form" z="user-managed"/>
             <menu:item id="i_institution_list" messageCode="global_menu_list" url="/console/institutions?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
@@ -31,6 +31,14 @@
         <menu:category id="c_userrole" z="C4C1ZBdes4PUIjEM3Ajwwhn1EwA=">
             <menu:item id="i_userrole_new" messageCode="global_menu_new" url="/console/userroles?form" z="user-managed"/>
             <menu:item id="i_userrole_list" messageCode="global_menu_list" url="/console/userroles?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
+        </menu:category>
+        <menu:category id="c_toolcategory" z="MgfRs+pRXoY8BnypY1EpVciqJic=">
+            <menu:item id="i_toolcategory_new" messageCode="global_menu_new" url="/toolcategorys?form" z="FpxUwa4oo2scwt6HzhU6+iYua2w="/>
+            <menu:item id="i_toolcategory_list" messageCode="global_menu_list" url="/toolcategorys?page=1&amp;size=${empty param.size ? 10 : param.size}" z="qoWhO0AER7MqPq4idS5PE1u0lyo="/>
+        </menu:category>
+        <menu:category id="c_toolcatalogitem" z="mbzuD/8fYG32vmcEYD6RiNezQuw=">
+            <menu:item id="i_toolcatalogitem_new" messageCode="global_menu_new" url="/toolcatalogitems?form" z="sEnjB8FEmUdYOICYHtYQsKaMHWU="/>
+            <menu:item id="i_toolcatalogitem_list" messageCode="global_menu_list" url="/toolcatalogitems?page=1&amp;size=${empty param.size ? 10 : param.size}" z="60ye9m0C9aDQLxzMr4FHRYbDOQs="/>
         </menu:category>
     </menu:menu>
 </div>
