--- a/trunk/virtual_lab/src/main/webapp/WEB-INF/views/menu.jspx
+++ b/trunk/virtual_lab/src/main/webapp/WEB-INF/views/menu.jspx
@@ -33,12 +33,12 @@
             <menu:item id="i_userrole_list" messageCode="global_menu_list" url="/console/userroles?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
         </menu:category>
         <menu:category id="c_toolcategory" z="MgfRs+pRXoY8BnypY1EpVciqJic=">
-            <menu:item id="i_toolcategory_new" messageCode="global_menu_new" url="/toolcategorys?form" z="FpxUwa4oo2scwt6HzhU6+iYua2w="/>
-            <menu:item id="i_toolcategory_list" messageCode="global_menu_list" url="/toolcategorys?page=1&amp;size=${empty param.size ? 10 : param.size}" z="qoWhO0AER7MqPq4idS5PE1u0lyo="/>
+            <menu:item id="i_toolcategory_new" messageCode="global_menu_new" url="/console/toolcategorys?form" z="user-managed"/>
+            <menu:item id="i_toolcategory_list" messageCode="global_menu_list" url="/console/toolcategorys?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
         </menu:category>
         <menu:category id="c_toolcatalogitem" z="mbzuD/8fYG32vmcEYD6RiNezQuw=">
-            <menu:item id="i_toolcatalogitem_new" messageCode="global_menu_new" url="/toolcatalogitems?form" z="sEnjB8FEmUdYOICYHtYQsKaMHWU="/>
-            <menu:item id="i_toolcatalogitem_list" messageCode="global_menu_list" url="/toolcatalogitems?page=1&amp;size=${empty param.size ? 10 : param.size}" z="60ye9m0C9aDQLxzMr4FHRYbDOQs="/>
+            <menu:item id="i_toolcatalogitem_new" messageCode="global_menu_new" url="/console/toolcatalogitems?form" z="user-managed"/>
+            <menu:item id="i_toolcatalogitem_list" messageCode="global_menu_list" url="/console/toolcatalogitems?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
         </menu:category>
     </menu:menu>
 </div>
