--- a/trunk/virtual_lab/src/main/webapp/WEB-INF/views/toolcategorys/create.jspx
+++ b/trunk/virtual_lab/src/main/webapp/WEB-INF/views/toolcategorys/create.jspx
@@ -2,8 +2,8 @@
 <div xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:spring="http://www.springframework.org/tags" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
-    <form:create id="fc_au_net_huni_model_ToolCategory" modelAttribute="toolCategory" path="/toolcategorys" render="${empty dependencies}" z="6qydPGZPQN8NKbaBUSJkmLUU3G4=">
-        <field:textarea field="name" id="c_au_net_huni_model_ToolCategory_name" required="true" z="m5la7+2QiYWTj728ai5dUbdk+lc="/>
+    <form:create id="fc_au_net_huni_model_ToolCategory" modelAttribute="toolCategory" path="/console/toolcategorys" render="${empty dependencies}" z="user-managed">
+        <field:input field="name" id="c_au_net_huni_model_ToolCategory_name" required="true" type="text" z="user-managed"/>
     </form:create>
     <form:dependency dependencies="${dependencies}" id="d_au_net_huni_model_ToolCategory" render="${not empty dependencies}" z="FUjpxF9jpf1x0AN+1WaSxc+mI8Q="/>
 </div>
