--- a/trunk/virtual_lab/src/main/webapp/WEB-INF/views/toolcatalogitems/list.jspx
+++ b/trunk/virtual_lab/src/main/webapp/WEB-INF/views/toolcatalogitems/list.jspx
@@ -3,11 +3,11 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <page:list id="pl_au_net_huni_model_ToolCatalogItem" items="${toolcatalogitems}" z="HnGw/SRTVyy4HkEa/Yywn6iPQoU=">
-        <table:table data="${toolcatalogitems}" id="l_au_net_huni_model_ToolCatalogItem" path="/toolcatalogitems" z="QXquJKD+nxOKVw0OruaNMqx4RrI=">
+        <table:table data="${toolcatalogitems}" id="l_au_net_huni_model_ToolCatalogItem" path="/console/toolcatalogitems" z="user-managed">
             <table:column id="c_au_net_huni_model_ToolCatalogItem_name" property="name" z="523lV7SK+77YRGf0+B0feaOgTT8="/>
             <table:column id="c_au_net_huni_model_ToolCatalogItem_description" property="description" z="FvNHXwz7NR/P06HkDAR+DftYrrM="/>
             <table:column id="c_au_net_huni_model_ToolCatalogItem_url" property="url" z="QbwEsyTPXuhlOt41dKcYIdWZjUc="/>
-            <table:column id="c_au_net_huni_model_ToolCatalogItem_categories" property="categories" z="NXUT1Ap1NuSAOhqgqxtxkcPqrXE="/>
+            <table:column id="c_au_net_huni_model_ToolCatalogItem_categories" property="categories" z="user-managed" render="false"/>
         </table:table>
     </page:list>
 </div>
